Adicionando conteúdo gerado nas aulas 2 e 3 da imersão css.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Rafael Ribeiro</title>
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -19,12 +19,37 @@
                 <li><a href="#">Sobre</a></li>
             </ul>
         </nav>
-        <header class="header">
+        <div class="header">
             <h1 class="site-title">Rafael Ribeiro</h1>
-            <h2 class="site-subtitle">Backend developer</h2>
-        </header>
+            <h2 class="site-subtitle">backend developer</h2>
+        </div>
     </header>
+    <section class="portfolio">
+        <h2>Portfólio</h2>
 
+        <div class="grid">
+            <figure>
+                <img class="img-portfolio" src="./img/any_project.jpeg" alt="Projeto 1">
+                <figcaption>Projeto 1</figcaption> 
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/any_project.jpeg" alt="Projeto 1">
+                <figcaption>Projeto 2</figcaption> 
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/any_project.jpeg" alt="Projeto 1">
+                <figcaption>Projeto 3</figcaption> 
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/any_project.jpeg" alt="Projeto 1">
+                <figcaption>Projeto 4</figcaption> 
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/any_project.jpeg" alt="Projeto 1">
+                <figcaption>Projeto 5</figcaption> 
+            </figure>
+        </div>
+    </section>
 </body>
 
 </html>
