--- a/index.html
+++ b/index.html
@@ -7,24 +7,46 @@
     
     <title>Rafael Ribeiro</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <script src="https://kit.fontawesome.com/90cb58b28f.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
     <header>
         <nav class="nav-menu">
-            <ul>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Sobre</a></li>
+            <ul class="container">
+                <li><a href="#portfolio">Projetos</a></li>
+                <li><a href="#contato">Contato</a></li>
+                <li><a href="#sobre">Sobre</a></li>
             </ul>
         </nav>
-        <div class="header">
+        <div class="titulo">
             <h1 class="site-title">Rafael Ribeiro</h1>
             <h2 class="site-subtitle">backend developer</h2>
         </div>
     </header>
-    <section class="portfolio">
+
+    <section class="sobre container" id="sobre">
+        <h2>Sobre</h2>
+        <figure class="avatar">
+            <img src="./img/me.jpg" alt="Foto Rafael segurando um violão">
+        </figure>
+
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis illo velit vero voluptate! Blanditiis aperiam aliquam natus rem nisi iure quia commodi facilis debitis adipisci, modi quam architecto nostrum maxime?</p>
+        <p>Provident sit illum totam cupiditate enim odio sapiente voluptate deleniti sunt optio? Repudiandae sint porro quaerat obcaecati illum quam enim voluptates dolor vel animi, cumque nam, a sapiente accusamus dolore?</p>
+        <p>Libero ullam eveniet unde eligendi aspernatur, ex illo nesciunt dolor voluptate, soluta consequuntur dignissimos tempore rem nobis consectetur cum natus nemo velit voluptatem laudantium ipsam? Alias perspiciatis error neque ducimus.</p>
+        <p>Distinctio ullam, delectus autem placeat consectetur asperiores id voluptatibus dolores numquam ipsum recusandae maiores dolor obcaecati odit nostrum. Suscipit nam illo mollitia tenetur et, unde repellendus eligendi earum molestiae cupiditate.</p>
+        <p>Perferendis quos quis culpa in optio, magni vero adipisci labore nulla dolorem dolores, sint vel ea repudiandae dolorum suscipit, ipsa impedit? Ut consequuntur sapiente ea ullam odio ab cupiditate. Exercitationem.</p>
+        <p>Minima, quibusdam distinctio repellat accusamus explicabo, praesentium eius magni dolores ea quae labore quasi quia laboriosam modi pariatur, blanditiis qui repellendus recusandae vel officia. Ad unde perspiciatis officia totam. Praesentium?</p>
+        <p>Fugiat eum aut officia aperiam, eaque voluptas iste placeat sint neque non tempora esse. Accusantium itaque, impedit nobis nihil totam atque modi ipsum at fugit autem voluptatem assumenda, voluptatum libero.</p>
+        <p>Nam facilis veniam a qui nulla debitis unde recusandae perspiciatis explicabo optio, necessitatibus quam eius accusantium rerum tempore ipsam officia, quas dignissimos. Eveniet error, aliquid doloremque a at dolor tenetur?</p>
+        <p>Eaque alias nesciunt consectetur assumenda soluta enim quos nihil eveniet quae, pariatur expedita minima iure sed dolorem a mollitia, ratione reprehenderit repudiandae laborum qui laudantium ex officiis fugit. Asperiores, fugiat.</p>
+        <p>Consequuntur, modi in labore hic ipsam fugit quibusdam atque sit illo quos cum, cupiditate corporis eius rem deleniti id perferendis non! Repellendus asperiores iste veritatis amet modi nihil iure enim.</p>
+        
+    </section>
+
+    <section class="portfolio container" id="portfolio">
         <h2>Portfólio</h2>
 
         <div class="grid">
@@ -50,6 +72,22 @@
             </figure>
         </div>
     </section>
+
+    <section class="contato container" id="contato">
+        <h2>Contato</h2>
+
+          <div class="grid icons">
+          <a target="_blank" href="https://github.com/rafa-ribeiro">
+            <i class="fab fa-github"></i>
+          </a>
+          <a target="_blank" href="https://linkedin.com/in/rafaelribeir0">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="mailto:me#rafaelribeiro.dev">
+            <i class="fas fa-at"></i>
+          </a>
+        </div>
+      </section>
 </body>
 
 </html>
